Fixed bug where flash container was not showing

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -101,7 +101,7 @@ footer {
 
 .flash-container {
   width: 100%;
-  z-index: -1; 
+  position: absolute;
 }
 
 .alert-notice, .alert-alert {
